crates/ohno_macros_impl/src/derive_error/snapshots/ohno_macros_impl__derive_error__tests__a_rejected_input_expands_to_diagnostics_only.snap
---
source: crates/ohno_macros_impl/src/derive_error/mod/tests.rs
expression: "rendered(parse_quote!(enum T { A, }))"
---
::core::compile_error! {
    "`#[derive(ohno::Error)]` supports structs only. An enum has no single field to hold the OhnoCore"
}
