crates/ohno_macros_impl/src/derive_error/snapshots/ohno_macros_impl__derive_error__tests__a_valid_input_expands_to_every_item.snap
---
source: crates/ohno_macros_impl/src/derive_error/mod/tests.rs
expression: "rendered(parse_quote!\n{\n    #[display(\"failed for {path}\")] #[from(std::io::Error)] struct T\n    { path: String, inner: ohno::OhnoCore }\n})"
---
#[automatically_derived]
impl ::core::fmt::Display for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        self.inner
            .format_error(
                f,
                "T",
                ::core::option::Option::Some(
                    ::std::borrow::Cow::from(
                        ::std::format!("failed for {}", & self.path),
                    ),
                ),
            )
    }
}
#[automatically_derived]
impl ::std::error::Error for T {
    fn source(&self) -> ::core::option::Option<&(dyn ::std::error::Error + 'static)> {
        self.inner.source()
    }
}
#[automatically_derived]
impl ::ohno::Enrichable for T {
    fn add_enrichment(&mut self, entry: ::ohno::EnrichmentEntry) {
        ::ohno::Enrichable::add_enrichment(&mut self.inner, entry);
    }
}
#[automatically_derived]
impl ::ohno::ErrorExt for T {
    fn message(&self) -> ::std::string::String {
        self.inner
            .format_message(
                "T",
                ::core::option::Option::Some(
                    ::std::borrow::Cow::from(
                        ::std::format!("failed for {}", & self.path),
                    ),
                ),
            )
    }
    fn backtrace(&self) -> &::std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
impl ::core::fmt::Debug for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_struct("T")
            .field("path", &self.path)
            .field("inner", &self.inner)
            .finish()
    }
}
#[automatically_derived]
impl T {
    /// Creates the error with no source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn new(path: impl ::core::convert::Into<String>) -> Self {
        Self {
            path: path.into(),
            inner: ::ohno::OhnoCore::default(),
        }
    }
    /// Creates the error wrapping `error` as its source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn caused_by(
        path: impl ::core::convert::Into<String>,
        error: impl ::core::convert::Into<
            ::std::boxed::Box<
                dyn ::std::error::Error + ::core::marker::Send + ::core::marker::Sync,
            >,
        >,
    ) -> Self {
        Self {
            path: path.into(),
            inner: ::ohno::OhnoCore::from(error),
        }
    }
}
#[automatically_derived]
impl ::core::convert::From<std::io::Error> for T {
    fn from(error: std::io::Error) -> Self {
        let __ohno_fields = (::core::default::Default::default(),);
        Self {
            path: __ohno_fields.0,
            inner: ::ohno::OhnoCore::from(error),
        }
    }
}
#[automatically_derived]
impl ::core::convert::From<::core::convert::Infallible> for T {
    fn from(_value: ::core::convert::Infallible) -> Self {
        ::core::unreachable!("Infallible cannot be constructed")
    }
}
