crates/ohno_macros_impl/src/derive_error/snapshots/ohno_macros_impl__derive_error__tests__a_valid_shape_with_an_invalid_template_generates_nothing.snap
---
source: crates/ohno_macros_impl/src/derive_error/mod/tests.rs
expression: "rendered(parse_quote!\n{\n    #[display(\"bad path: {pth}\")] struct T\n    { path: String, inner: ohno::OhnoCore }\n})"
---
::core::compile_error! {
    "unknown field `pth` in `#[display(...)]`, available fields: `path`, `inner`"
}
